Fix the save trip panel when there are so many entities that the main clipper panel overflows.

--- a/static/css/clipper.css
+++ b/static/css/clipper.css
@@ -31,9 +31,18 @@ a:hover {
   height: 100%;
 }
 
+.summary-panel {
+  height: 100%;
+}
+
 .upper-panel {
   background-color: #ebecec;
   padding: 1px 0 20px 0;
+}
+
+.summary-panel.has-overflow .upper-panel {
+  height: calc(100% - 162px);
+  overflow: scroll;
 }
 
 .intro-text {
@@ -246,6 +255,15 @@ a:hover {
   width: 100%;
   padding: 10px 10px 30px 10px;
   overflow: scroll;
+  -webkit-box-shadow: 0px -3px 3px 0px rgba(0, 0, 0, 0.15);
+  -moz-box-shadow: 0px -3px 3px 0px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px -3px 3px 0px rgba(0, 0, 0, 0.15);
+}
+
+.summary-panel.has-overflow .save-to-trip-plan-panel {
+  position: fixed;
+  bottom: 0;
+  height: 162px;
 }
 
 .save-to-trip-plan-panel .save-prompt-text {
