--- a/static/css/style.css
+++ b/static/css/style.css
@@ -873,10 +873,6 @@ right: 10px;
   margin: 20px 0;
 }
 
-.reclip-confirmation-modal .start-new-trip-form {
-  margin-top: 10px;
-}
-
 .pac-container {
   z-index: 1100;
 }
